Added lets see first to 5

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>ROCK, PAPER, SCISSORS</h1>
+    <h3>Lets see the first to 5 😉</h3>
     <div class="selections">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
